FISH-11746: use HttpURLConnection instead of HttpClient for JDK8 compatibility